fix(navbar): add minor UX improvements for main navbar and gap for responsive navbar

--- a/src/assets/styles/components/cards/InfoCard.module.css
+++ b/src/assets/styles/components/cards/InfoCard.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 calc(33% - 2rem);
-    gap: 0.5rem;
-    padding: 2rem;
+    gap: 1rem;
+    padding: 3rem;
     animation: var(--fade-in) 0.75s;
 }
 
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 1280px) {
     .container {
-        padding: 2rem 1rem;
+        padding: 2rem;
         flex: 0 0 calc(50% - 2rem);
     }
 }
