--- a/src/assets/styles/components/responsive-navbar/ResponsiveNavbar.module.css
+++ b/src/assets/styles/components/responsive-navbar/ResponsiveNavbar.module.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 1rem;
+    padding: 4.5rem 1rem;
     background: var(--subtle-black);
 }
 
@@ -24,6 +24,7 @@
 .list {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .link {
